fix text input width that created horizontal scrolling

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -112,6 +112,7 @@ span, a {
       color: white;
       padding: 0;
       margin: 0;
+      width: calc(100vw - var(--page-padding) * 2);
       &::placeholder {
         color: rgba(255,255,255,0.4);
       }
